add /register route